# ulfius-bot

./: .env  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  docker-compose.yml
src/: discord_interactions.c  discord_interactions.h  endpoint_handler.h  main.c  verifier.c  verifier.h
src/http_api/: discord_http_api.c  discord_http_api.h
src/interactions/: discord_interactions.c  discord_interactions.h
src/verifier/: verifier.c  verifier.h  verifier_private.h
test/verifier/: str_to_bytes.c
